docs: Criando documentação no Swagger de Enterprise
