# app/Models/Enterprise.php
@@ -5,6 +5,16 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(
+ *      schema="Enterprise",
+ *      required={"id", "name"},
+ *      @OA\Property(property="id", type="string", example="1", maxLength=4),
+ *      @OA\Property(property="name", type="string", example="Base Sede", maxLength=40),
+ *      @OA\Property(property="created_at", type="string", format="date-time", example="2024-01-30T03:00:00.000000Z"),
+ *      @OA\Property(property="updated_at", type="string", format="date-time", example="2024-01-30T03:00:00.000000Z")
+ * )
+ */
 class Enterprise extends Model
 {
     use HasFactory;
